trunk/Archive2/35/b758f40945d0a7/output
main.cpp:1:1: error: stray '\303' in program
 / * Comentários de estilo C pode conter
 ^
main.cpp:1:1: error: stray '\241' in program
main.cpp:2:1: error: stray '\303' in program
 várias linhas * / 
 ^
main.cpp:2:1: error: stray '\241' in program
main.cpp:5:1: error: stray '\303' in program
 Comentários / / C + estilo + pode comentar uma linha
 ^
main.cpp:5:1: error: stray '\241' in program
main.cpp:12:3: error: stray '\303' in program
   / / O código abaixo não será executado 
   ^
main.cpp:12:3: error: stray '\263' in program
main.cpp:12:3: error: stray '\303' in program
main.cpp:12:3: error: stray '\243' in program
main.cpp:12:3: error: stray '\303' in program
main.cpp:12:3: error: stray '\241' in program
main.cpp:15:3: error: stray '\303' in program
   / / O código abaixo será executado 
   ^
main.cpp:15:3: error: stray '\263' in program
main.cpp:15:3: error: stray '\303' in program
main.cpp:15:3: error: stray '\241' in program
main.cpp:1:1: error: expected unqualified-id before '/' token
 / * Comentários de estilo C pode conter
 ^
